--- a/.github/workflows/maven-release-snapshot.yml
+++ b/.github/workflows/maven-release-snapshot.yml
@@ -22,9 +22,9 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: Build with Maven
-        run: mvn -B package
+        run: mvn -B --no-transfer-progress package
       - name: Deploy
-        run: mvn -B -P release deploy
+        run: mvn -B --no-transfer-progress -P release deploy
         env:
           MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.NEXUS_PASSWORD }}
