--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>deploy</id>
             <build>
                 <plugins>
                     <plugin>
