--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com:peterjeschke/mockito-maven-plugin.git</connection>
-        <developerConnection>scm:git:git://github.com:peterjeschke/mockito-maven-plugin.git</developerConnection>
+        <connection>scm:git:https://github.com/peterjeschke/mockito-maven-plugin.git</connection>
+        <developerConnection>scm:git:git://git@github.com:peterjeschke/mockito-maven-plugin.git</developerConnection>
         <url>https://github.com/peterjeschke/mockito-maven-plugin</url>
     </scm>
 
