--- a/pom.xml
+++ b/pom.xml
@@ -43,14 +43,15 @@
         <assertj.version>3.27.3</assertj.version>
         <junit-jupiter.version>5.12.0</junit-jupiter.version>
         <maven.version>3.9.9</maven.version>
+        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
         <maven-plugin-tools.version>3.15.1</maven-plugin-tools.version>
+        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
+        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
+        <publishing-plugin.version>0.7.0</publishing-plugin.version>
         <mockito.version>5.15.2</mockito.version>
         <sisu-plugin.version>0.3.5</sisu-plugin.version>
         <spotless.version>2.44.3</spotless.version>
-        <publishing-plugin.version>0.7.0</publishing-plugin.version>
-        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
-        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -173,6 +174,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
             </plugin>
         </plugins>
     </build>
