--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>dev.jeschke.maven.mockito</groupId>
     <artifactId>mockito-maven-plugin</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Mockito Maven Plugin</name>
@@ -31,7 +31,7 @@
         <connection>scm:git:https://github.com/peterjeschke/mockito-maven-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/peterjeschke/mockito-maven-plugin.git</developerConnection>
         <url>https://github.com/peterjeschke/mockito-maven-plugin</url>
-      <tag>v1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
