--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.jeschke.maven.mockito</groupId>
     <artifactId>mockito-maven-plugin</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Mockito Maven Plugin</name>
@@ -31,13 +32,15 @@
         <connection>scm:git:https://github.com/peterjeschke/mockito-maven-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/peterjeschke/mockito-maven-plugin.git</developerConnection>
         <url>https://github.com/peterjeschke/mockito-maven-plugin</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <last-released-version>1.0.0</last-released-version>
 
         <assertj.version>3.27.3</assertj.version>
         <junit-jupiter.version>5.12.0</junit-jupiter.version>
@@ -130,6 +133,11 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>dev.jeschke.maven.mockito</groupId>
+                <artifactId>mockito-maven-plugin</artifactId>
+                <version>${last-released-version}</version>
+            </plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
